# THT_Bestueckung

./: README.md
src/: 0_tht.py  1_automatic_TCP_and_hand_base_calibration.ipynb  2_grip_capacitor_v4_all_elements.ipynb  Parameters.json  PhotoneoSettings.phop  drill.csv  place_positions.pkl  transformation_matrix_Photoneo.pkl
src/PyUrComu/: Periphery.py  PyUrComu.py  PyUrComu.pyproj  PyUrComu.sln  Test.py  Test2.py  TimeMeasure.py  UrCommunication.py
src/RobotScript/: Grip.txt  GripBig.txt  GripCap1.txt  MoveJ.txt  MoveL.txt  OnRobot_width.txt  StdOnRobotMsg.txt  ftwidth.script  test.script
src/WireDetection/: CMakeLists.txt
src/WireDetection/src/: additional_functions.hpp  main.cpp  pcl_main_operations.hpp
src/images/: calibration_points.ply  image_3d.exr  wire_1.exr  wire_1_.ply  wire_2.exr  wire_2_.ply  wires.exr
